@@ -5,7 +5,9 @@ import exceptions.NotFoundException;
 import models.audio.collections.Playlist;
 import models.audio.items.Song;
 import models.users.User;
+import repositories.audio.collections.PlaylistRepository;
 
+import java.sql.SQLException;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -13,6 +15,7 @@ public class PlaylistService {
     private static PlaylistService instance = null;
     private final List<Playlist> playlists = new ArrayList<>();
     private PlaylistService() {}
+    private final PlaylistRepository playlistRepository = new PlaylistRepository();
 
     public static synchronized PlaylistService getInstance() {
         if (instance == null) {
@@ -23,6 +26,11 @@ public class PlaylistService {
 
     public void addPlaylist(Playlist playlist) {
         User currentUser = UserService.getInstance().getCurrentUser();
+        try {
+            playlistRepository.create(playlist);
+        } catch (SQLException e) {
+            System.out.printf("SQL error: %s", e.getMessage());
+        }
         playlists.add(playlist);
         currentUser.addPlaylist(playlist);
     }
@@ -30,12 +38,22 @@ public class PlaylistService {
     public void addSongToPlaylist(int songId, int playlistId) {
         Song song = MusicService.getInstance().getSongById(songId);
         Playlist playlist = getPlaylist(playlistId);
+        try {
+            playlistRepository.addSongToPlaylist(songId, playlistId);
+        } catch (SQLException e) {
+            System.out.printf("SQL error: %s", e.getMessage());
+        }
         playlist.addItem(song);
     }
 
     public void removePlaylist(int playlistId) {
         User currentUser = UserService.getInstance().getCurrentUser();
         Playlist playlist = getPlaylist(playlistId);
+        try {
+            playlistRepository.delete(playlistId);
+        } catch (SQLException e) {
+            System.out.printf("SQL error: %s", e.getMessage());
+        }
         playlists.remove(playlist);
         currentUser.removePlaylist(playlist);
     }
@@ -52,8 +70,27 @@ public class PlaylistService {
     }
 
     public Playlist getPlaylist(int playlistId) {
-        User currentUser = UserService.getInstance().getCurrentUser();
-        return currentUser.getPlaylists().stream().filter(p -> p.getId() == playlistId).findFirst().orElseThrow(() -> new NotFoundException("Playlist"));
+        Optional<Playlist> playlistOptional;
+
+        playlistOptional = playlists.stream().filter(playlist -> playlist.getId() == playlistId).findFirst();
+
+        if (playlistOptional.isEmpty()) {
+            try {
+                    playlistOptional = playlistRepository.findById(playlistId);
+                    playlistOptional.ifPresent(playlists::add);
+                }
+            catch (SQLException ex) {
+                System.out.printf("SQL error: %s", ex.getMessage());
+            }
+        }
+
+        if (playlistOptional.isEmpty()) {
+            throw new NotFoundException("Playlist with id " + playlistId + " not found");
+        }
+
+        return playlistOptional.get();
+//        User currentUser = UserService.getInstance().getCurrentUser();
+//        return currentUser.getPlaylists().stream().filter(p -> p.getId() == playlistId).findFirst().orElseThrow(() -> new NotFoundException("Playlist"));
     }
 
     public void togglePlaylistVisibility(int playlistId) {
@@ -63,9 +100,23 @@ public class PlaylistService {
             throw new IllegalOperationException("You can only toggle the visibility of your own playlists");
         }
         playlist.setPublic(!playlist.isPublic());
+        try {
+            playlistRepository.update(playlist);
+        } catch (SQLException e) {
+            System.out.printf("SQL error: %s", e.getMessage());
+        }
+    }
+
+    public List<Playlist> getPlaylists() {
+        try {
+            return playlistRepository.findAll();
+        } catch (SQLException e) {
+            System.out.printf("SQL error: %s", e.getMessage());
+            return List.of();
+        }
     }
 
     public List<Playlist> getAllPublicPlaylists() {
-        return playlists.stream().filter(Playlist::isPublic).collect(Collectors.toList());
+        return getPlaylists().stream().filter(Playlist::isPublic).toList();
     }
 }
